feat: 관리자 role 인증 + 관리자 계정 시더
3번 관리자 탭(공지 작성) 개발을 위한 사전 인증 인프라:
- app_user.role(USER/ADMIN) 컬럼 + UserRole enum. 회원가입은 USER 고정
- 로그인 시 role → 세션 권한(ROLE_ADMIN/ROLE_USER) 부여
- SecurityConfig: /api/v1/admin/** hasRole("ADMIN") 보호
- GET /me 응답에 role 노출(프론트 관리자 탭 판단용)
- AdminSeeder: 앱 시작 시 관리자 계정 1개 보장(idempotent).
  자격증명은 app.admin.{email,handle,password} 설정으로 override(기본 개발용)

검증: 관리자/일반유저 role 확인, admin 경로 인가(미인증 401 / 일반유저 403 / 관리자 통과).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>